# claudetree

./: .gitignore  MIGRATE_TO_GO.md  Makefile  README.md  go.mod  go.sum  install.sh  pyproject.toml  uninstall.sh
cmd/cc/: main.go
internal/backend/: backend.go
internal/tui/: app.go  browse.go  contextmenu.go  dialogs.go  dirpicker.go  messages.go  preview.go  search.go  styles.go  trash.go
src/claudetree/: __init__.py  __main__.py  app.py  backend.py
