[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claudetree"
version = "0.1.0"
description = "A Textual TUI session manager for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["claude", "cli", "tui", "session-manager"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Terminals",
]
dependencies = [
    "textual>=0.47",
]

[project.scripts]
cc = "claudetree.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
